tests/error/override_confict.gw
#! [contains] conflicts with previously defined value
class C
{
	int test;
}

class D extends C
{
	fun void test() {}
}

C c;
D d;
<<< c >>>;
<<< d >>>;